--- a/examples/style.less
+++ b/examples/style.less
@@ -1,4 +1,7 @@
 @import '~iview/src/styles/index.less';
+// @import '~vant/lib/index.less';
+@import '~epage/src/style/main.less';
 @import '~epage-iview/src/style/main.less';
-@import '../src/styles/main.less';
+// @import '~epage-vant/src/style/main.less';
+@import '../src/style/main.less';
 // @import '~epage/src/style/theme/orange.less';
